[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]

[tool.pytest.ini_options]
addopts = "-m 'not spe1'"
markers = [
    "spe1: marks tests needing results from ert model of the spe1 test case",
]

[tool.ruff]
src = ["webviz_ert"]
line-length = 88

[tool.ruff.lint]
select = [
  "W",  # pycodestyle
  "I",  # isort
  "B",  # flake-8-bugbear
  "SIM",  # flake-8-simplify
  "F",  # pyflakes
  "PL",  # pylint
  "NPY",  # numpy specific rules
  "C4",  # flake8-comprehensions
]
preview = true
ignore = ["PLW2901",  # redefined-loop-name
          "PLR2004",  # magic-value-comparison
          "PLR0915",  # too-many-statements
          "PLR0912",  # too-many-branches
          "PLR0911",  # too-many-return-statements
          "PLC2701",  # import-private-name
          "PLR6201",  # literal-membership
          "PLR0914",  # too-many-locals
          "PLR6301",  # no-self-use
          "PLW1641",  # eq-without-hash
          "PLR0904",  # too-many-public-methods
          "PLR1702",  # too-many-nested-blocks
          "PLW3201",  # bad-dunder-method-name
          "PLC0414",  # useless-import-alias
]

[tool.ruff.lint.extend-per-file-ignores]
"webviz_ert/models/__init__.py" = ["I"]
"webviz_ert/plugins/__init__.py" = ["I"]

[tool.ruff.lint.pylint]
max-args = 10
